--- a/nvme-rhel-88.adoc
+++ b/nvme-rhel-88.adoc
@@ -25,7 +25,7 @@ This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for R
 
 You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
-== Step 2: Validate software versions
+== Step 2: Verify the software version and NVMe configuration
  
 You can use the following procedure to validate the minimum supported RHEL 8.8 software versions.
 
@@ -77,20 +77,20 @@ libnvme-1.4-3.el8.x86_64
 grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-477.10.1.el8_8.x86_64
 ----
 
-. On the RHEL 8.8 host, check the hostnqn string at `/etc/nvme/hostnqn`:
+. On the RHEL 8.8 host, check the `hostnqn` string at `/etc/nvme/hostnqn`:
 +
 [source,cli]
 ----
 cat /etc/nvme/hostnqn
 ----
 +
-The following example shows an hostnqn version:
+The following example shows an `hostnqn` version:
 +
 ----
 nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-11e8-bbff-7ed30aef123f
 ----
 
-. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
+. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP storage system:
 +
 [source,cli]
 ----
@@ -108,31 +108,31 @@ vs_nvme161   rhel_161_LPe32002    nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-
 ====
 +
 [NOTE]
-If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
+If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP storage system subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
 . Reboot the host.
-
++
 [NOTE]
 ====
-If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the `enable_foreign` setting to the `/etc/multipath.conf` file:	
+To run both NVMe and SCSI traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs. To prevent dm-multipath from claiming ONTAP namespace devices, exclude them by adding the `enable_foreign` setting to the `/etc/multipath.conf` file:	
 
+[source,cli]
 ----
-# cat /etc/multipath.conf
+cat /etc/multipath.conf
 defaults {
-  enable_foreign  NONE
+        enable_foreign     NONE
 }
 ----
 ====
 
-== Step 3: Configure NVMe/FC
+== Step 3: Configure NVMe/FC and NVMe/TCP
 
-You can configure NVMe/FC for Broadcom/Emulex or Marvell/QLogic adapters.
+Configure NVMe/FC with Broadcom/Emulex or Marvell/QLogic adapters, or configure NVMe/TCP using manual discovery and connect operations. 
 
 [role="tabbed-block"]
-=====
-.Broadcom/Emulex
+====
+.FC - Broadcom/Emulex
 --
-Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
 
@@ -145,7 +145,7 @@ Configure NVMe/FC for a Broadcom/Emulex adapter.
 cat /sys/class/scsi_host/host*/modelname
 ----
 +
-You should see output similar to:
+You should see output similar to the following example:
 +
 ----
 LPe32002-M2
@@ -159,7 +159,7 @@ LPe32002-M2
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should see output similar to:
+You should see output similar to the following example:
 +
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
@@ -175,7 +175,7 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 cat /sys/class/scsi_host/host*/fwrev
 ----
 +
-The following example shows firmware versions:
+The command returns firmware versions:
 +
 ----
 14.0.639.18, sli-4:2:c
@@ -194,10 +194,11 @@ The following example shows a driver version:
 ----
 0:14.0.0.18
 ----
+
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
+. Verify that `lpfc_enable_fc4_type` is set to `3`:
 +
 [source,cli]
 ----
@@ -211,7 +212,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 cat /sys/class/fc_host/host*/port_name
 ----
 +
-You should see output similar to:
+You should see output similar to the following example:
 +
 ----
 0x100000109b1c1204
@@ -241,7 +242,7 @@ cat /sys/class/scsi_host/host*/nvme_info
 +
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 NVME Initiator Enabled
@@ -270,39 +271,26 @@ Total FCP Cmpl 000000000826ced5 Issue 000000000826c226 OutIO fffffffffffff351
         abort 0000029d noxri 00000000 nondlp 000008df qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000821 Err 00012fcd
 ----
-====
+=====
+
 --
-.Marvell/QLogic
+.FC - Marvell/QLogic
 --
-Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
-. Verify that you are using the supported adapter model, driver, and firmware versions:
+. Verify that you are using the supported adapter driver and firmware versions:
 +
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/symbolic_name
 ----
 +
-You should see output similar to:
+The following example shows driver and firmware versions:
 +
 ----
 QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
 QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
-----
-
-. Verify that the recommended inbox qla2xxx driver is loaded:
-+
-[source,cli]
-----
-cat /sys/module/qla2xxx/version
-----
-+
-You should see the following output:
-+
-----
-The driver version included in the RHEL 8.8 kernel.
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
@@ -312,21 +300,15 @@ The driver version included in the RHEL 8.8 kernel.
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
 +
-The expected outptut is 1.
+The expected output is 1.
+
 --
-=====
-
-== Step 4: Optionally, enable 1MB I/O 
-
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
-
-== Step 5: Configure NVMe/TCP
-
-include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
+.TCP
+--
 
 .Steps
 
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
@@ -374,7 +356,7 @@ sectype: none
 ----
 =====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully retrieve discovery log page data: 
 +
 [source,cli]
 ----
@@ -383,15 +365,15 @@ nvme discover -t tcp -w host-traddr -a traddr
 +
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
-nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
-nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
-nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
-nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
+nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14
+nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.15
+nvme discover -t tcp -w 192.168.211.79 -a 192.168.211.14
+nvme discover -t tcp -w 192.168.211.79 -a 192.168.211.15
 ----
-====
+=====
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
@@ -405,14 +387,21 @@ nvme connect-all -t tcp -w host-traddr -a traddr -1 1800
 =====
 [subs=+quotes]
 ----
-nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.14	-l	1800
-nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.15	-l	1800
-nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.14	-l	1800
-nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.15	-l	1800
+nvme connect-all -t tcp -w 192.168.111.79 -a 192.168.111.14 -l 1800
+nvme connect-all -t tcp -w 192.168.111.79 -a 192.168.111.15 -l 1800
+nvme connect-all -t tcp -w 192.168.211.79 -a 192.168.211.14 -l 1800
+nvme connect-all -t tcp -w 192.168.211.79 -a 192.168.211.15 -l 1800
 ----			
 =====
 
-== Step 6: Validate NVMe-oF
+--
+====
+
+== Step 4: Optionally, enable 1MB I/O for NVMe/FC
+
+You can enable I/O requests of size 1MB for NVMe/FC configured with a Broadcom adapter, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O for NVMe/FC^].
+
+== Step 5: Validate NVMe-oF
 
 include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
@@ -523,15 +512,15 @@ nvme netapp ontapdevices -o json
 --
 =====
 
-== Step 7: Review the known issues
+== Step 6: Review the known issues
 
-The NVMe-oF host configuration for RHEL 8.8 with ONTAP release has the following known issues:
+These are the known issues:
 
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description
 
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047]	|RHEL 8.8 NVMe-oF hosts create duplicate persistent discovery controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running Red Hat Enterprise Linux (RHEL) 8.8 on an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047]	|RHEL 8.8 NVMe-oF hosts create duplicate persistent discovery controllers (PDCs)	|On NVMe-oF hosts, you can use the "nvme discover -p" command to create PDCs. When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running RHEL 8.8 on an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 |===
 
 // 2022,12-06, Jira IEOPS-690
