ontapdoc-3096 minor edits

--- a/nvme-rhel-82.adoc
+++ b/nvme-rhel-82.adoc
@@ -89,9 +89,7 @@ vserver nvme subsystem host show -vserver vs_fcnvme_141
 ----
 Vserver      Subsystem        Host           NQN
 ----------- --------------- ----------- ---------------
-  vs_fcnvme_141
-    nvme_141_1
-        nqn.2014-08.org.nvmexpress:uuid:9ed5b327-b9fc-4cf5-97b3-1b5d986345d1
+vs_fcnvme_141   nvme_141_1      nqn.2014-08.org.nvmexpress:uuid:9ed5b327-b9fc-4cf5-97b3-1b5d986345d1
 ----
 ====
 +
