--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -487,7 +487,7 @@ These are the known issues:
 |===
 |NetApp Bug ID	|Title	|Description
 |1503468
-|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In RHEL 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace. 
+|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command returns a list of NVMe controllers for a given subsystem. In RHEL 9.1, this command shows controllers with their ANA state for all namespaces in the subsystem. Because ANA state is a per-namespace attribute, the command should display unique controller entries with the path state for each namespace.
 |===
 
 // 2024 SEP 2, ONTAPDOC-2345
