--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -20,9 +20,9 @@ This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for R
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
-== Step 1: Optionally, enable SAN booting 
+== Step 1: Optionally, enable SAN booting
 
-You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
+include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Verify the software version and NVMe configuration
 
@@ -118,6 +118,8 @@ Configure NVMe/FC with Broadcom/Emulex or Marvell/QLogic adapters, or configure 
 =====
 .FC - Broadcom/Emulex
 --
+
+Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
 
@@ -261,6 +263,8 @@ FCP CMPL: xb 000014a5 Err 0002149a
 .FC - Marvell/QLogic
 --
 
+Configure NVMe/FC for a Marvell/QLogic adapter.
+
 .Steps
 
 . Verify that you are using the supported adapter driver and firmware versions:
@@ -289,6 +293,8 @@ The expected output is 1.
 
 .TCP
 --
+
+The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually.
 
 .Steps
 
@@ -446,7 +452,7 @@ include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 
 == Step 4: Optionally, enable 1MB I/O for NVMe/FC
 
-You can enable I/O requests of size 1MB for NVMe/FC configured with a Broadcom adapter, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O for NVMe/FC^].
+include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[] 
 
 == Step 5: Verify NVMe boot services 
 
