--- a/nvme-rhel-83.adoc
+++ b/nvme-rhel-83.adoc
@@ -22,7 +22,7 @@ This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for R
 
 == Step 1: Optionally, enable SAN booting
 
-You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
+include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Verify the software version and NVMe configuration
 
@@ -241,7 +241,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 
 == Step 4: Optionally, enable 1MB I/O for NVMe/FC
 
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
+include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[] 
 
 == Step 5: Validate NVMe-oF
 
